Fixed an issue where the icon for an Eradication event which was directly triggered by a DiscoverACure event would not be displayed until the page was refreshed. Fixed an issue where the undoing of an Eradication event which was triggered by a DiscoverACure event would set the relevant disease status back to 'cured' after it had already been set to the desired 'rampant' status. Fixed an issue where the page's vertical scrollbar would become briefly visible at various moments during animations, which caused the page's width to decrease slightly and the event history's horizontal scroll position to move slightly out of place. The Discover A Cure animation now includes the 'flipping' of the cure marker from the 'cured' side to the 'eradicated' side.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body
 	
 	position: relative;
 	overflow-x: hidden;
+	overflow-y: hidden;
 	
 	-webkit-touch-callout: none; /* iOS Safari */
 	-webkit-user-select: none;   /* Chrome/Safari/Opera */
